Bug 132957 - Crash using dcop action: album_forward
Summary: Crash using dcop action: album_forward
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Albums-Engine (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-08-25 10:36 UTC by Antonio E.
Modified: 2017-08-15 12:36 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio E. 2006-08-25 10:36:49 UTC
Version:           0.9-svn (using KDE KDE 3.5.4)
Installed from:    Gentoo Packages
Compiler:          gcc-4.1.1 
OS:                Linux

I described this problem in a comment in #113330, but that issue was a wish. I thought that it would be better to open a new bug for this crash, as it's independient of the description of the wish.

I repeat here the problem:

Playing with dcop I found a bug, that makes digikam to crash (I'm using 0.9svn).

If I have the Image Editor, and I make:

dcop digikam-2830 Digikam activateAction album_forward

Then, digikam crashes. It happens always.

I've tried a couple of other actions from the Image Editor and they work fine. I haven't try so many other dcop actions.
Comment 1 Antonio E. 2006-08-25 10:37:38 UTC
The crash happens even with the Image Editor hidden.
Comment 2 Marcel Wiesweg 2006-08-25 15:33:08 UTC
SVN commit 577073 by mwiesweg:

Set this to 0 as in the other similar methods

BUG: 132957



 M  +2 -1      NEWS  
 M  +3 -0      digikam/albumhistory.cpp  


--- trunk/extragear/graphics/digikam/NEWS #577072:577073
@@ -236,6 +236,7 @@
 142 ==> 128817 : configure timestamp naming format for directory names.
 143 ==> 132660 : Shortcuts for ratings do not work as of 0.9.x beta.
 144 ==> 126874 : digikam does not support <shift+del>.
-145 ==> 
+145 ==> 132957 : Crash using dcop action: album_forward
+146 ==>
 
 ----------------------------------------------------------------------------------------------------
--- trunk/extragear/graphics/digikam/digikam/albumhistory.cpp #577072:577073
@@ -268,6 +268,9 @@
 
 void AlbumHistory::forward(Album **album, QWidget **widget, unsigned int steps)
 {
+    *album = 0;
+    *widget = 0;
+
     if(m_forwardStack->isEmpty() || steps > m_forwardStack->count())
         return;
     
Comment 3 Antonio E. 2006-08-25 20:08:09 UTC
Thank you very much for the patch