Set this to 0 as in the other similar methods

BUG: 132957


svn path=/trunk/extragear/graphics/digikam/; revision=577073